--- a/WebAutoLogin/App.xaml
+++ b/WebAutoLogin/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="Autologin.App"
+﻿<Application x:Class="WebAutoLogin.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Exit="Application_Exit">
