--- a/WebAutoLogin/Controls/NetworkQualityMeter/NetworkQualityMeterControl.xaml
+++ b/WebAutoLogin/Controls/NetworkQualityMeter/NetworkQualityMeterControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Autologin.Controls.NetworkQualityMeter.NetworkQualityMeterControl"
+﻿<UserControl x:Class="WebAutoLogin.Controls.NetworkQualityMeter.NetworkQualityMeterControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:local="clr-namespace:Autologin.Controls.NetworkQualityMeter"
+             xmlns:local="clr-namespace:WebAutoLogin.Controls.NetworkQualityMeter"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance local:NetworkQualityMeterLogic, IsDesignTimeCreatable=True}"
              d:DesignHeight="24" d:DesignWidth="24" d:Background="White">
