--- a/WebAutoLogin/Controls/PingerStatus/PingerStatusControl.xaml
+++ b/WebAutoLogin/Controls/PingerStatus/PingerStatusControl.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Autologin.Controls.PingerStatus.PingerStatusControl"
+﻿<UserControl x:Class="WebAutoLogin.Controls.PingerStatus.PingerStatusControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:nqm="clr-namespace:Autologin.Controls.NetworkQualityMeter"
-             xmlns:local="clr-namespace:Autologin.Controls.PingerStatus"
+             xmlns:nqm="clr-namespace:WebAutoLogin.Controls.NetworkQualityMeter"
+             xmlns:local="clr-namespace:WebAutoLogin.Controls.PingerStatus"
              mc:Ignorable="d" d:Background="White" d:Width="400"
              d:DataContext="{d:DesignInstance Type=local:WebPinger, IsDesignTimeCreatable=True}">
     <DockPanel>
