--- a/WebAutoLogin/StatsUI/StatsView.xaml
+++ b/WebAutoLogin/StatsUI/StatsView.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Autologin.StatsUI.StatsView"
+﻿<Window x:Class="WebAutoLogin.StatsUI.StatsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Autologin.StatsUI"
-        xmlns:pingstat="clr-namespace:Autologin.Controls.PingerStatus"
+        xmlns:local="clr-namespace:WebAutoLogin.StatsUI"
+        xmlns:pingstat="clr-namespace:WebAutoLogin.Controls.PingerStatus"
         mc:Ignorable="d" ResizeMode="CanMinimize"
         d:DataContext="{d:DesignInstance local:StatsLogic, IsDesignTimeCreatable=True}"
         Title="StatsView" Width="400">
