--- a/WebAutoLogin/StatsUI/StatsView.xaml
+++ b/WebAutoLogin/StatsUI/StatsView.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WebAutoLogin.StatsUI"
-        xmlns:pingstat="clr-namespace:WebAutoLogin.Controls.PingerStatus"
+        xmlns:pingstat="clr-namespace:WebAutoLogin.Controls.PingStatistics"
         mc:Ignorable="d" ResizeMode="CanMinimize"
         d:DataContext="{d:DesignInstance local:StatsLogic, IsDesignTimeCreatable=True}"
         Title="StatsView" Width="400">
@@ -62,12 +62,19 @@
         </DockPanel>
         <ScrollViewer x:Name="WebPingers">
             <StackPanel>
-                <pingstat:PingerStatusControl DataContext="{Binding StatsData.Gateway}"/>
-                <pingstat:PingerStatusControl DataContext="{Binding StatsData.Portal}"/>
-                <ItemsControl ItemsSource="{Binding StatsData.InternetAddresses}">
+                <pingstat:PingStatisticsControl DataContext="{Binding StatsData.Gateway}"/>
+                <pingstat:PingStatisticsControl DataContext="{Binding StatsData.Portal}"/>
+                <ItemsControl ItemsSource="{Binding StatsData.Destinations}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <pingstat:PingerStatusControl DataContext="{Binding}"/>
+                            <pingstat:PingStatisticsControl DataContext="{Binding}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+                <ItemsControl ItemsSource="{Binding StatsData.Nodes}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <pingstat:PingStatisticsControl DataContext="{Binding}"/>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
