--- a/WebAutoLogin/App.xaml
+++ b/WebAutoLogin/App.xaml
@@ -2,4 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Exit="Application_Exit">
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/StatsUI/StatsUIStyles.xaml"/>
+                <ResourceDictionary Source="/Controls/PingStatistics/PingStatisticsResources.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
