--- a/WebAutoLogin/Controls/PingStatistics/PingStatisticsResources.xaml
+++ b/WebAutoLogin/Controls/PingStatistics/PingStatisticsResources.xaml
@@ -1,15 +1,26 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sys="clr-namespace:System;assembly=netstandard">
+
     <Style TargetType="{x:Type Border}" x:Key="SignalBar">
         <Setter Property="Margin" Value="1" />
         <Setter Property="CornerRadius" Value="2" />
     </Style>
-    <Color x:Key="BarColorX" R="225" G="225" B="225"/>
-    <Color x:Key="BarColor0" R="0" G="0" B="0"/>
-    <Color x:Key="BarColor1" R="225" G="225" B="225"/>
-    <Color x:Key="BarColor2" R="225" G="225" B="225"/>
-    <Color x:Key="BarColor3" R="225" G="225" B="225"/>
-    <Color x:Key="BarColor4" R="225" G="225" B="225"/>
-    <Color x:Key="BarColor5" R="225" G="225" B="225"/>
-    <Color x:Key="BarColor6" R="225" G="225" B="225"/>
+    <Color x:Key="DisabledBarColorTop" R="127" G="127" B="127" A="63"/>
+    <Color x:Key="DisabledBarColorBottom" R="127" G="127" B="127" A="127"/>
+
+    <sys:String x:Key="BarColorCurvePoints">
+        0, 0.5, 0.75, 0.9, 0.97, 1
+    </sys:String>
+    <Color x:Key="BarColorDisabled" R="225" G="225" B="225" A="255"/>
+    <Color x:Key="BarColorMin" R="225" G="225" B="225" A="255"/>
+    <Color x:Key="BarColorMax" R="102" G="0" B="225" A="255"/>
+
+    <Color x:Key="BarColor0" R="136" G="0" B="0" A="255"/>
+    <Color x:Key="BarColor1" R="225" G="136" B="0" A="255"/>
+    <Color x:Key="BarColor2" R="187" G="187" B="0" A="255"/>
+    <Color x:Key="BarColor3" R="0" G="187" B="0" A="255"/>
+    <Color x:Key="BarColor4" R="0" G="187" B="187" A="255"/>
+    <Color x:Key="BarColor5" R="0" G="136" B="225" A="255"/>
+
 </ResourceDictionary>
